<resources>
    <string name="app_name">My Cab User</string>
    <string name="verify">Verify</string>
    <string name="enter_yout_otp_here">Enter your  OTP code here</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="name_exaple_com">name@exaple.com</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="connect_with_google">Connect With Google</string>
    <string name="connect_with_facebook">Connect With Facebook</string>
    <string name="track_your_ride">Track your ride</string>
    <string name="request_ride">Request Ride</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="confirm_your_driver">Confirm your driver</string>
    <string name="know_your_driver_in_advance_and_be_nable_to_view_current_location_in_real_time_non_the_map">Know your driver in advance and be\nable to view current location in real time\non the map</string>
    <string name="by_click_start_you_agree_to_our_terms_and_conditions">By click start, you agree to our Terms and conditions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_popular">BottomPopularActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="apply">Apply</string>
    <string name="input_promo_code">Input Promo Code</string>
    <string name="next">Next</string>
    <!--  <string name="api_key">"AIzaSyDB-DSxcKUzV8bNwFlAafIgGvXRAj1X0CU"</string>-->
    <!-- <string name="api_key">"AIzaSyD3_8H0ytV4gbNenMktwQdX8lM4gmetxsM"</string>--><!--True lease-->
   <!-- <string name="api_key">"AIzaSyD3_8H0ytV4gbNenMktwQdX8lM4gmetxsM"</string>-->
   <!-- <string name="api_key">"AIzaSyCoGZm11Rjh0Yc_NkMPDyIkZH0x87F0cKs"</string>-->
    <string name="api_key">"AIzaSyCJuMnRukkohrMxeK_zcN8pbdzUuCHa-PE"</string>
    <string name="schedule_your_trip">Schedule your Trip</string>
    <string name="request">Request</string>
    <string name="payment">Payment</string>
    <string name="promo_code">Promo Code</string>
    <string name="options">Options</string>
    <string name="confirm">Confirm Ride</string>
    <string name="distance">DISTANCE</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="rate_your_trip_experience">Rate your trip experience ?</string>
    <string name="final_your_trip_amount">Final your trip amount</string>
    <string name="ride_completed">Ride Completed</string>
    <string name="say_something_about_your_experience">Say Something about your experience</string>
    <string name="bill_details">Bill Details</string>
    <string name="cash_payment">(cash payment)</string>
    <string name="ride_fare">Ride Fare</string>
    <string name="taxes">Taxes</string>
    <string name="discount">Discount</string>
    <string name="total_bill">Total Bill</string>
    <string name="done">Done</string>
    <string name="save">Save</string>

</resources>