<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    tools:context=".Activity.RideCompletedActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_header"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/purple_200">


                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:src="@drawable/arrowleft" />

                <TextView
                    android:id="@+id/arrowleft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/ivBack"
                    android:fontFamily="@font/robotoslabextrabold"
                    android:gravity="center"
                    android:text="@string/ride_completed"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                app:cardElevation="8dp"
                app:cardCornerRadius="4dp"
                android:layout_margin="10dp"
                android:layout_height="220dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/robotoslabextrabold"
                    android:text="@string/bill_details"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tx1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"

                    android:layout_marginTop="17dp"
                    android:layout_toRightOf="@+id/tx"
                    android:fontFamily="@font/robotoslabextrabold"
                    android:text="@string/cash_payment"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/txfare1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/robotoslabregular"
                    android:text="@string/ride_fare"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
                <TextView
                    android:id="@+id/txsys"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="3dp"
                    android:fontFamily="@font/robotoslabregular"
                    android:text="$"
                    android:layout_toLeftOf="@+id/txFare"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/txFare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/robotoslabregular"
                    android:text="28.99"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/txTax1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/robotoslabregular"
                    android:text="@string/taxes"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
                <TextView
                    android:id="@+id/txsys1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="3dp"
                    android:fontFamily="@font/robotoslabregular"
                    android:text="$"
                    android:layout_toLeftOf="@+id/txTax"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/txTax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/robotoslabregular"
                    android:text="1.99"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/txDis1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/robotoslabregular"
                    android:text="@string/discount"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
                <TextView
                    android:id="@+id/txsys2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="3dp"
                    android:fontFamily="@font/robotoslabregular"
                    android:text="$"
                    android:layout_toLeftOf="@+id/txDiscount"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/txDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/robotoslabregular"
                    android:text="28.99"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#dbdbdb"/>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content">


                        <TextView
                            android:id="@+id/txTotal1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/robotoslabextrabold"
                            android:text="@string/total_bill"
                            android:textColor="@color/black"
                            android:textSize="13sp" />
                        <TextView
                            android:id="@+id/txsys3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="3dp"
                            android:fontFamily="@font/robotoslabregular"
                            android:text="$"
                            android:layout_toLeftOf="@+id/txGrandTotal"
                            android:textColor="@color/black"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/txGrandTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:fontFamily="@font/robotoslabregular"
                            android:text="28.99"
                            android:textColor="@color/black"
                            android:textSize="13sp" />

                    </RelativeLayout>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            app:cardElevation="8dp"
            app:cardCornerRadius="4dp"
            android:layout_margin="10dp"
            android:layout_height="800dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/robotoslabextrabold"
                android:text="Support"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#dbdbdb"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txQues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/robotoslabregular"
                    android:text="I would like a refund"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#dbdbdb"/>
        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/purple_200"
        android:text="@string/done"
        app:cornerRadius="8dp">


    </com.google.android.material.button.MaterialButton>

</RelativeLayout>